--- a/src/components/WhyIntrodo.css
+++ b/src/components/WhyIntrodo.css
@@ -1,9 +1,10 @@
-h3{
+h3 {
   margin: 0 !important;
 }
+
 .why-intro-section {
   text-align: center;
-  padding: 120px 220px 0px 100px; 
+  padding: 120px 220px 0px 100px;
 }
 
 .why-intro-title {
@@ -29,20 +30,24 @@ h3{
 
 .why-intro-grid {
   display: grid;
-  grid-template-columns: repeat(6, 1fr); /* 6 columns layout */
-  grid-template-rows: repeat(5, auto); /* Added 5 rows for the new feature */
+  grid-template-columns: repeat(6, 1fr);
+  /* 6 columns layout */
+  grid-template-rows: repeat(5, auto);
+  /* Added 5 rows for the new feature */
   gap: 20px;
-  padding: 0 30px; /* Add padding to create space between the grid and the screen */
+  padding: 0 30px;
+  /* Add padding to create space between the grid and the screen */
 }
 
 .why-intro-box {
-  background: linear-gradient(135deg, #FFBB1A, #FF6347); /* Gradient background */
-  color: rgba(255, 255, 255, 1);
+  /* background: linear-gradient(135deg, #FFBB1A, #FF6347); */
+  color: white;
   border-radius: 20px;
   padding: 20px;
   text-align: left;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  height: 554px;
+  display: flex;
+  flex-direction: column;
 }
 
 .why-intro-box h3 {
@@ -59,11 +64,29 @@ h3{
   line-height: 24px;
 }
 
+.payroll-gradient {
+  background: linear-gradient(135deg, rgba(255, 174, 92, 1), rgba(253, 65, 144, 1));
+  padding: 0 !important;
+}
+
+.smart-insights-top-gradient {
+  background: linear-gradient(135deg, #FD4190, #A8C5FF);
+  padding-left: 10%;
+  padding-right: 10%;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.03);
+}
+
+.smart-insights-gradient {
+  background: linear-gradient(135deg, #FEBED9, #C8DDFF);
+  padding: 10%;
+}
+
 .global-payroll {
   grid-column: span 2;
   grid-row: span 4;
   background: linear-gradient(135deg, rgba(255, 174, 92, 1), rgba(253, 65, 144, 1));
-  margin-left: 10px; /* Add margin to create additional space from the screen */
+  margin-left: 10px;
+  /* Add margin to create additional space from the screen */
 }
 
 /* Updated style for the Global Payroll Simplicity heading */
@@ -72,7 +95,8 @@ h3{
   font-weight: 600;
   font-size: 31.25px;
   line-height: 36.87px;
-  color: rgba(255, 255, 255, 1); /* Pure white text */
+  color: rgba(255, 255, 255, 1);
+  /* Pure white text */
 }
 
 .global-payroll p {
@@ -80,33 +104,35 @@ h3{
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  letter-spacing: 2%; 
-  color: rgba(255, 255, 255, 1); 
+  letter-spacing: 2%;
+  color: rgba(255, 255, 255, 1);
 }
 
 
 .smart-insights {
-  grid-column: span 2; /* This spans across 2 columns */
-  grid-row: span 1; /* This spans across 1 row */
-  background: linear-gradient(to top,rgba(168, 197, 255, 1),rgba(253, 65, 144, 1));
+  grid-column: span 2;
+  /* This spans across 2 columns */
+  grid-row: span 1;
+  /* This spans across 1 row */
+  background: linear-gradient(to top, rgba(168, 197, 255, 1), rgba(253, 65, 144, 1));
 }
 
 .new-feature-box {
-  grid-column: span 2; /* This spans across 2 columns */
-  grid-row: span 4; /* Placed below Smart Insights */
+  grid-column: span 2;
+  /* This spans across 2 columns */
+  grid-row: span 4;
+  /* Placed below Smart Insights */
   background: linear-gradient(to top, rgba(94, 156, 255, 1), rgba(105, 72, 154, 1));
 }
 
 .legacy-harmony {
-  grid-column: span 2; /* This spans across 2 columns */
-  grid-row: span 3; /* Increased row span to 3 */
-  background: linear-gradient(
-    to bottom right, 
-    rgba(254, 190, 217, 1) 10% ,
-    rgba(200, 221, 255, 1) 90% 
-
-  );
+  padding: 0 !important;
+  overflow: hidden;
+  background: linear-gradient(to bottom right,
+      #5E9CFF,
+      #69489A);
 }
+
 .legacy-harmony-title {
   font-family: 'Archivo', sans-serif;
   font-weight: 600;
@@ -127,18 +153,25 @@ h3{
 }
 
 .rock-solid-compliance {
-  grid-column: span 3; /* This spans across 3 columns */
-  grid-row: span 1; /* This spans across 1 row */
   display: flex;
-  justify-content: space-between; /* Space between the text and image */
-  align-items: center; /* Vertically center both text and image */
-  background: linear-gradient(135deg, rgba(253, 107, 168, 1), rgba(94, 156, 255, 1)); /* Gradient background */
-  padding: 20px; /* Padding around the content */
-  border-radius: 20px; /* Rounded corners */
+  justify-content: space-between;
+  /* Space between the text and image */
+  align-items: center;
+  /* Vertically center both text and image */
+  background: linear-gradient(135deg, rgba(253, 107, 168, 1), rgba(94, 156, 255, 1));
+  /* Gradient background */
+  padding: 20px;
+  /* Padding around the content */
+  border-radius: 20px;
+  /* Rounded corners */
+  flex-direction: row !important;
+  padding: 0 !important;
+  overflow: hidden;
 }
 
 .compliance-text {
-  flex: 1; /* Take up available space on the left */
+  flex: 1;
+  /* Take up available space on the left */
 }
 
 .rock-solid-compliance-title {
@@ -147,7 +180,7 @@ h3{
   font-size: 31.25px;
   line-height: 36.87px;
   font-size: 16px;
-  color: rgba(255, 255, 255, 1); 
+  color: rgba(255, 255, 255, 1);
 }
 
 .rock-solid-compliance-description {
@@ -155,31 +188,50 @@ h3{
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  color: rgba(255, 255, 255, 1); /* White text */
+  color: rgba(255, 255, 255, 1);
+  /* White text */
 }
 
 .compliance-image {
-  flex-shrink: 0; /* Prevent the image from shrinking */
-  width: 150px; /* Set a fixed width for the image */
+  flex-shrink: 0;
+  /* Prevent the image from shrinking */
+  width: 150px;
+  /* Set a fixed width for the image */
   height: auto;
-  margin-left: 20px; /* Space between the text and image */
-  border-radius: 10px; /* Rounded corners for the image */
+  margin-left: 20px;
+  /* Space between the text and image */
+  border-radius: 10px;
+  /* Rounded corners for the image */
 }
 
 .cloud-powered-savings {
-  grid-column: span 3; /* This spans across 3 columns */
-  grid-row: span 1; /* This spans across 1 row */
-  background: linear-gradient(135deg, #FF4500, #FFBB1A);
+  background: linear-gradient(135deg, #8A70B0, #482084);
+  flex-direction: row !important;
+  padding: 0 !important;
+  overflow: hidden;
 }
 
 .payroll-card-background {
-  position: relative;
+  position: absolute;
   width: 247.1px;
-  height: 173.07px;
+  height: 23px;
   background-color: rgba(255, 129, 0, 1);
-  border-radius: 19.23px;
-  margin-top: 23.08px;
-  margin-left: 20.19px;
+  border-top-left-radius: 19.23px;
+  border-top-right-radius: 19.23px;
+  top: -16%;
+  left: 24px;
+}
+
+.payroll-card-background-light {
+  position: absolute;
+  width: 200px;
+  height: 23px;
+  background-color: #FF8100;
+  border-top-left-radius: 19.23px;
+  border-top-right-radius: 19.23px;
+  top: -30%;
+  left: 45px;
+  opacity: 0.7;
 }
 
 .payroll-card {
@@ -191,14 +243,14 @@ h3{
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  gap: 16px; 
+  gap: 16px;
   width: 250px;
-  height:min-content;
+  height: min-content;
 }
 
 .payroll-card-row {
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   font-family: 'MonaSansMedium', sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -211,20 +263,24 @@ h3{
   font-size: 16px;
   color: #333;
 }
+
 .flag-icon {
   width: 20px;
   height: auto;
   margin-right: 8px;
 }
+
 .loader-icon {
   width: 16px;
   height: 16px;
-  margin-right: 5px; /* Adjust the spacing as needed */
+  margin-right: 5px;
+  /* Adjust the spacing as needed */
 }
 
-.no-padding{
+.no-padding {
   padding: 0 !important;
 }
-.legacy-harmony-desc{
+
+.legacy-harmony-desc {
   padding: 20px;
 }
